--- a/Project_7_pc2/css/MKII.css
+++ b/Project_7_pc2/css/MKII.css
@@ -21,4 +21,4 @@ textarea {font-size: 20px; text-align: right;align-items: center;}
 fieldset {border-color: red; border-width: 10px; border-style: solid; background-color: red;}
 body{background-image: url(https://slack-imgs.com/?c=1&url=https%3A%2F%2Fwww.floridachildinjurylawyer.com%2Ffiles%2F2014%2F10%2FMedical-Symbol-Care-for-Children-and-Adults.jpg);}
 p{text-align: center; font-size: 15px; font-weight: normal; font-style: normal;}
-img {width: 40px; height: 40px;}
+img {width: 400px; height: 400px; al}
